syntax = "proto3";

package cryptography;

service Cryptography {
  rpc ComputeSHA1Hash(stream ByteArray) returns (SHA1HashResult);

  rpc EncryptOneTimePad(stream ByteArray) returns (stream OneTimePadResult);
  rpc DecryptOneTimePad(stream OneTimePadResult) returns (stream ByteArray);

  rpc EncryptBMP(stream ByteArray) returns (stream ByteArray);
  rpc DecryptBMP(stream ByteArray) returns (stream ByteArray);

  rpc EncryptXXTEA(stream XXTEARequest) returns (stream ByteArray);
  rpc DecryptXXTEA(stream XXTEARequest) returns (stream ByteArray);

  rpc EncryptFourSquareCipher(stream FourSquareCipherText) returns (stream FourSquareCipherText);
  rpc DecryptFourSquareCipher(stream FourSquareCipherText) returns (stream FourSquareCipherText);

  rpc EncryptOneTimePadOFB(stream ByteArray) returns (stream OneTimePadResult);
  rpc DecryptOneTimePadOFB(stream OneTimePadResult) returns (stream ByteArray);

  rpc EncryptOneTimePadParallel(stream ByteArray) returns (stream OneTimePadResult);
  rpc DecryptOneTimePadParallel(stream OneTimePadResult) returns (stream ByteArray);
}

message ByteArray {
	bytes bytes = 1;
}

message FourSquareCipherText {
	string text = 1;
}

message SHA1HashResult {
	string hash = 1;
}

message OneTimePadResult {
	ByteArray encrpyted_file = 1;
	ByteArray pad = 2;
}

message XXTEARequest {
	ByteArray file = 1;
	string key = 2;
}